apps/homectl/homectl-next/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homectl-ingress
  namespace: default
spec:
  ingressClassName: private
  tls:
    - secretName: orriborri-com-tls
  rules:
    - host: homectl.orriborri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homectl-next
                port:
                  number: 80
